--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,61 @@
-#list{
+#list {
     height:900px; width:100%;
     overflow:hidden; overflow-y:scroll;
     font-size: 20px;
     flex-wrap: wrap;
-    }
+    list-style-type: none;
+    padding-top: 20px;
+}
 
-#title{
+#lists {
+    border: 1px solid black;
+    padding-bottom: 2px;
+}
+
+#app-title {
     text-align: center;
+    font-weight: 600;
 }
 
-.container{
-
-    margin:0 auto;
-    flex-wrap: wrap;
+#app-date {
+    float:right;
 }
 
-/*#list_container{
-    margin:0 auto;
-    flex-wrap: wrap;
-}*/
-
-#content {
-    margin: 20px 20px 10px 20px;
-
-    flex-wrap: wrap;
-}
-#search-bar {
-        margin: 20px 20px 10px 100px;
-
-        flex-wrap: wrap;
-}
-
-
-/*#wrapper {
-    padding-left: 0;
-    transition: all 0.5s ease;
-}
-
-#fail {
-    align-content: middle;
-}
-
-#map {
-    height: 100%;
-}
-
-
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
-#menu-toggle{
-
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #000;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-#search-bar{
-    position: fixed;
-    left: 80%;
+#input-box {
+    height:30px;
     width: 300px;
-    font-size: large;
+    font-size:14pt;
+    margin: 20px 20px 10px 40px;
+    border: 1px solid black;
+    flex-wrap: wrap;
 }
 
-#title{
-    text-align: center;
-    color: white;
-}
-
-.locations {
+#list-item {
     padding: 0;
     border: none;
     background: none;
-    color: white;
-    font-size: large;
+    outline:0;
 }
 
-.sidebar-nav {
-    position: absolute;
-    top: 20px;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+#title {
+    text-align: center;
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+#content {
+    margin: 20px 10px 10px 10px;
+    padding: 20px 10px 70px 10px;
+    flex-wrap: wrap;
 }
 
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
+.container {
+
+    margin:0 auto;
+    flex-wrap: wrap;
 }
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255, 255, 255, 0.2);
+hr{
+    border: none;
+    height: 1px;
+    color: #333;
+    background-color: #333;
 }
-
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav>.sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav>.sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav>.sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
-@media screen and (max-width: 600px) {
-    #images{
-        display: none;
-    }
-
-    #search-bar{
-        font-size: medium;
-        left: 60%;
-        width:150px;
-    }
-
-    #menu-toggle{
-        font-size: 18px;
-    }
-
-#wrapper.toggled #sidebar-wrapper {
-  width: 200px;
-    }
-}*/
